
2009-01-03
Initial Project in ajcodekatas
Parser and tests
Integer Expressions and tests
Machine with Stack and tests
Quotation Expression and tests
List Expression and tests
Pop, Dup, Swap Expression and tests
Cons, Uncons, Empty Expressions and tests
If, Not, And, Or, True, False, Eq Expressions and tests
Papply, Apply, Compose, Quote, Dip Expressions and tests
Dec, Inc, Mod Expressions and tests

2009-01-04
Nil expression and tests
Reimplements Papply
Compiler with tests
Machine.StackContent
Console App
ToString in Expressions
String parsing, expression and compiling
Clear
Define
Eval
While
Id
Load
Lt_int
Lteq_int
Gt_int
Gteq_int
Boot.ajcat
DefineTest.ajcat

2009-01-10
Adding support for double, parsing, compiling
DoubleExpression
add_dbl, sub_dbl, mult_dbl, div_dbl
as_int, as_bool, as_char, as_string, as_list, as_var, as_dbl

2009-01-11
A expression (apply one argument to unary function)
abs_dbl, acos_dbl, cos_dbl, asin_dbl, sin_dbl

2009-01-17
Refactoring some test in ExpressionTest.cs to EvaluateUnaryExpression, EvaluateBinaryExpression
tan_dbl, atan_dbl, atan2_dbl
sinh_dbl, cosh_dbl, tanh_dbl
More test and code coverage for expressions

2009-04-10
Drop Expressions
Refactoring to ExpressionEnvironment, TopExpressionEnvironment