@@ -44,7 +44,7 @@
     <Compile Include="EnvironmentTest.cs" />
     <Compile Include="ExpressionTest.cs" />
     <Compile Include="MachineTest.cs" />
-    <Compile Include="ParserTest.cs" />
+    <Compile Include="LexerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
