@@ -1,7 +1,5 @@
 
 Miscellaneous
-Refactor Expressions (static class and method -> dynamic)
-Environment, TopEnvironment
 CurrentCulture or InvariantCulture
 
 Level 0
